--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="p10.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/all.min.css">
     <!--https://www.onlinequrancourse.com/tajweed/noon-sakin-tanveen/-->
     <title>rule for reading Quran</title>
