--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                     </a>
             </li>
-            <li><a href="file:///e:/Visual%20Studio%20Code/my%20practice/p10(islamic)/registration%20eng.html?">Registration</a></li>
+            <li><a href="https://sabujhasan21.github.io/strawberis/">Registration</a></li>
         </ul>
     </nav>
     <header>
